# terraform-aws-lambda-nuke

./: .gitignore  .kitchen.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Gemfile  IMPLEMENTATION_COVERAGE.md  README.md  iam.tf  main.tf  note.md  outputs.tf  pyproject.toml  pytest.ini  requirements-dev.txt  tox.ini  variables.tf  versions.tf
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml
examples/analytic/emr/: main.tf
examples/analytic/msk/: main.tf
examples/compute/ami-nuke/: main.tf
examples/compute/autoscaling-nuke/: main.tf
examples/compute/dlm-nuke/: main.tf
examples/compute/ebs-nuke/: main.tf  versions.tf
examples/compute/ec2-nuke/: main.tf
examples/compute/ecr-nuke/: main.tf
examples/test_fixture/: main.tf  variables.tf
package/: autoscaling.py  ebs.py  ec2.py  loadbalancing.py  main.py  timeparse.py
package/compute/: autoscaling.py  ebs.py  ec2.py  ecr.py  ecs.py  eks.py  elasticbeanstalk.py  elb.py  elbv2.py  key_pair.py  loadbalancing.py  spot.py
package/database/: dax.py  dynamodb.py  elasticache.py  neptune.py  rds.py  redshift.py
package/governance/: __init__.py  cloudwatch.py
package/network/: eip.py  endpoint.py  internetgateway.py  natgateway.py  routetable.py  security.py
package/nuke/: client_connections.py  exceptions.py  main.py  test.py  timeparse.py
package/storage/: __init__.py  efs.py  glacier.py  s3.py
test/awspec/: cloudwatch_spec.rb  iam_spec.rb  lambda_spec.rb
test/sanity/: .pylintrc  terraform_tests.sh
tests/sanity/: .pylintrc  terraform_tests.sh
tests/unit/: __init__.py
(+98 files in other folders)
