[tool.poetry]
name = "terraform-aws-lambda-nuke"
version = "2.9.0"
description = "Terraform module which create lambda which destroy all resources on aws account."
authors = ["diodonfrost <diodon.frost@diodonfrost.me>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
bandit = "1.6.2"
black = "20.8b1"
boto3 = "1.15.16"
botocore = "1.18.16"
flake8 = "3.8.4"
flake8-colors = "0.1.6"
flake8-docstrings = "1.5.0"
flake8-import-order = "0.18.1"
flake8-typing-imports = "1.10.0"
moto = "1.3.14"
mypy = "0.790"
pep8-naming = "0.11.1"
pydocstyle = "5.1.1"
pyflakes = "2.2.0"
pylint = "2.6.0"
pytest = "6.1.1"
pytest-cov = "2.10.1"
pytest-pythonpath = "0.7.3"
pytest-xdist = "2.1.0"
tox = "3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
